[iOS] Set a11y identifiers directly to UIButtons for legacy toolbar.

LegacyReadingListToolbarButton is actually a plain UIView superview of
the UIButton handling touch events, so setting the a11y identifier on
the superview was not passing touches to the underlying button in
EG tests.  This CL updates LegacyReadingListToolbarButton to take an
a11y identifier that's applied to the underlying UIButton, allowing
touches to be handled properly.

Bug: 866012
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I1e98ae482bd21e1e913d500d53f43526fadb62af
Reviewed-on: https://chromium-review.googlesource.com/1147310
Commit-Queue: Justin Cohen <justincohen@chromium.org>
Reviewed-by: Justin Cohen <justincohen@chromium.org>
Reviewed-by: Peter Lee <pkl@chromium.org>
Cr-Commit-Position: refs/heads/master@{#577407}
Former-commit-id: f4815dd13856719927d601287d825a6265c4729c