ios/chrome/browser/ui/reading_list/legacy_reading_list_toolbar_button.mm
@@ -34,7 +34,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 - (instancetype)initWithText:(NSString*)labelText
                  destructive:(BOOL)isDestructive
-                    position:(ButtonPositioning)position {
+                    position:(ButtonPositioning)position
+                  identifier:(NSString*)identifier {
   self = [super init];
   if (!self) {
     return self;
@@ -44,6 +45,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
                      destructive:isDestructive
                         position:position];
   _button.translatesAutoresizingMaskIntoConstraints = NO;
+  _button.accessibilityIdentifier = identifier;
   [self addSubview:_button];
 
   NSDictionary* views = @{@"button" : _button};
